workshop04/overlays/prod/minio-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
  - host: data-188.166.206.98.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port:
              name: api-port
  - host: console-188.166.206.98.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port:
              name: console-port
